--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.password=springstudent
 spring.main.banner-mode=off
 logging.level.root=warn
 
+# show jpa logging
+logging.level.org.hibernate.SQL=trace
+logging.level.org.hibernate.orm.jdbc.bind=trace 
+
